@startuml

title __SEARCH's Class Diagram__\n

  namespace com.kanzu.flibook {
    namespace ui.search {
      class com.kanzu.flibook.ui.search.SearchFragment {
          ~ loaded : boolean
          ~ navController : NavController
          ~ pageCount : int
          ~ pageNumber : int
          ~ savedData : Bundle
          ~ state : Bundle
          - root : View
          + onCreate()
          + onCreateView()
          + onDestroyView()
          + onResume()
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.search {
      class com.kanzu.flibook.ui.search.SearchViewModel {
          - mText : MutableLiveData<String>
          + SearchViewModel()
          + getText()
      }
    }
  }
  

  com.kanzu.flibook.ui.search.SearchFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.search.SearchFragment o-- com.kanzu.flibook.databinding.FragmentSearchBinding : binding
  com.kanzu.flibook.ui.search.SearchFragment o-- com.kanzu.flibook.ui.search.SearchViewModel : searchViewModel
  com.kanzu.flibook.ui.search.SearchViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
